force-app/main/default/objects/Client__c/fields/adress__c.field-meta.xml
<CustomField>
    <fullName>adress__c</fullName>
    <description>Endereço do cliente</description>
    <label>adress</label>
    <length>100</length>
    <type>Text</type>
</CustomField>