force-app/main/default/objects/Client__c/fields/complement__c.field-meta.xml
<CustomField>
    <fullName>complement__c</fullName>
    <description>Complementos do endereço</description>
    <label>complement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>