force-app/main/default/objects/Client__c/fields/Gerero__c.field-meta.xml
<CustomField>
    <fullName>Gerero__c</fullName>
    <label>Gerero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feminino</fullName>
                <default>true</default>
                <label>Feminino</label>
            </value>
            <value>
                <fullName>Masculino</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>