force-app/main/default/objects/Client__c/fields/number_adress__c.field-meta.xml
<CustomField>
    <fullName>number_adress__c</fullName>
    <description>Numero do endereço</description>
    <label>number_adress</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>