force-app/main/default/objects/Client__c/fields/phone__c.field-meta.xml
<CustomField>
    <fullName>phone__c</fullName>
    <description>Telefone de contato do  usuário</description>
    <label>phone</label>
    <type>Phone</type>
</CustomField>